--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -19,5 +19,14 @@ const {name, position, secondary_info, institute} =Astro.props;
     .Name{
         font-weight: bold
     }
+    @media screen and (max-width:750px){
+        .Cards{
+            width: 100%;
+            border-left: none;
+            border-right: none;
+            border-radius: 0;
+        }
+
+	}
 
 </style>
