--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,11 +24,12 @@ import img  from "./src/assets/88x31.png"
 <style>
     .footer_class{
 		display: flex;
-		z-index: 0;
+		z-index: 3;
 		position: static;
 		margin-top: -80px;
+		margin-bottom: 0;
 		width: 100%;
-		height: 50vh;
+		height: 100%;
 		background-color: #3374ff;
 	}
 	.footer_class h2{
@@ -38,8 +39,8 @@ import img  from "./src/assets/88x31.png"
 	.footer_about{
 		display: flex;
 		flex-direction: column;
-		padding-left: 50px;
-		padding-top: 20px;
+		padding-left: 5vw;
+		padding-top: 2vw;
 		color: white;
 	}
 	.footer_about a{
@@ -54,8 +55,8 @@ import img  from "./src/assets/88x31.png"
 	.footer_resources{
 		display: flex;
 		flex-direction: column;
-		padding-left: 160px;
-		padding-top: 20px;
+		padding-left: 10vw;
+		padding-top: 2vw;
 		color: white;
 	}
 	.footer_resources a{
@@ -68,10 +69,11 @@ import img  from "./src/assets/88x31.png"
 	}
 
     .footer_img{
-        position: relative;
-        top:40px;
-        left: 40px;
+        position:inherit;
+        margin-top: 3vw;
+        margin-left: 10vw;
         padding-bottom: 0;
+		margin-bottom: 0;
     }
     .footer_img p{
         padding-top: 0;
@@ -83,7 +85,7 @@ import img  from "./src/assets/88x31.png"
     }
     .footer_img a:hover{
         color: white;
-        text-decoration: underline;
+        text-decoration: underline grey;
     }
     
 </style>
