--- a/src/components/Logos.astro
+++ b/src/components/Logos.astro
@@ -11,24 +11,27 @@ const {height}= Astro.props;
 ---
 <div class="Logo_box">
     <ul>
-        <li id="img1"><img src={IIT_Bombay.src} style={{ height: `${height}px` }}></li>
-        <li id="img2"><img src={FOSSEE.src} style={{ height: `${height}px` }}></li>
-        <li id="img3"><img src={RuDRA.src} style={{ height: `${height}px` }}></li>
-        <li id="img4"><img src={Tirupati.src} style={{ height: `${height}px` }}></li>
-        <li id="img5"><img src={navavishkar.src} style={{ height: `${height}px` }}></li>
-        <li id="img6"><img src={npimc.src} style={{ height: `${height}px` }}></li>
-        <li id="img7"><img src={ICFOSS.src} style={{ height: `${height}px` }}></li>
+        <li id="img1"><img src={IIT_Bombay.src} ></li>
+        <li id="img2"><img src={FOSSEE.src} ></li>
+        <li id="img3"><img src={RuDRA.src} ></li>
+        <li id="img4"><img src={Tirupati.src} ></li>
+        <li id="img5"><img src={navavishkar.src} ></li>
+        <li id="img6"><img src={npimc.src} ></li>
+        <li id="img7"><img src={ICFOSS.src}></li>
     </ul>
 </div>
 
 
 <style>
     .Logo_box{
+        /* border: solid 2px burlywood; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 100%;
         background-color: white;
     }
     ul{
-        /* background-color: white; */
         display: flex;
         align-items: center;
         justify-content: center;
@@ -38,5 +41,32 @@ const {height}= Astro.props;
     li{
         padding-right: 10px;
         padding-left: 10px;
+        
     }
+    img{
+        height: 50px;
+    }
+
+    /* Adding Responsiveness */
+    @media screen and (max-width:850px) {
+        img{
+            height: 40px;
+        }
+    }
+    @media screen and (max-width:730px) {
+        img{
+            height: 30px;
+        }
+    }
+    @media screen and (max-width:600px) {
+        img{
+            height: 20px;
+        }
+    }
+    @media screen and (max-width:450px) {
+        img{
+            height: 15px;
+        }
+    }
+        
 </style>
