--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,8 +1,26 @@
 ---
+import '@fortawesome/fontawesome-free/css/all.css'
+---.
+<script>
+  // Find the button and the Navlist
+  const button = document.querySelector('.button');
+  const navList = document.querySelector('.Navlist');
+  const navbar = document.querySelector('.Navbar');
 
----
+  // Handle click event on the button
+  button.addEventListener('click', () => {
+    // Toggle the visibility class on the Navlist
+    navList.classList.toggle('visible');
+    navbar.classList.toggle('expanded');
+  });
+</script>
+
+
 
 <div class="Navbar">
+    <div class="button">
+        <i class="fa-solid fa-bars"></i>
+    </div>
     <ul class="Navlist">
         <li class="Nav_element"><a href="/">Home</a></li>
         <li class="Nav_element"><a href="/">About</a></li>
@@ -15,6 +33,9 @@
 </div>
 
 <style>
+    .button{
+        visibility: hidden;
+    }
     ul{
         list-style-type: none;
     }
@@ -31,7 +52,7 @@
         justify-content: center;
         background-color: #f2f6e7;
         height: 50px;
-        z-index: 30;
+        z-index: 10;
     }
     a{
         font-size: 13pt;
@@ -50,5 +71,72 @@
     }
     a:hover{
         color: white;
+    }
+
+    /* Adding Responsiveness */
+    @media screen and (max-width:900px) {
+        .button{
+            visibility: visible;
+            position:relative;
+            display: flex;
+            flex-direction: row-reverse;
+            top: 20px;
+            right: 20px;
+        }
+        
+        ul{
+            list-style-type: none;
+        }
+        .Navlist{
+            display: flex;
+            justify-content: center ;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 140px;
+            height: 40px;
+            width: 90%;
+        }
+        .Navbar{
+            position: sticky;
+            transition: height 0.5s ease-in-out;
+            top:0;
+            display: flex;
+            width: 100%;
+            flex-direction: row-reverse;
+            background-color: #f2f6e7;
+            height:50px;
+            z-index: 10;
+            overflow: hidden;
+        }
+        .Navbar.expanded{
+            transition: height 0.5s ease-in-out;
+            height: 350px;
+        }
+        a{
+            font-size: 13pt;
+            text-decoration: none;
+            color: blue;
+        }
+        .Nav_element{
+            /* visibility: hidden; */
+            display: flex;
+            width: 100vw;
+            /* border: solid 2px red; */
+            padding: 0;
+            margin: 0;
+        }
+        .Navlist.visible .Nav_element {
+            visibility: visible;
+        } 
+        .Nav_element:hover{
+            background-color: darkblue;
+        }
+        a{
+            /* border: solid 2px green; */
+            padding: 8px;
+        }
+        a:hover{
+            color: white;
+        }  
     }
 </style>
