--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,21 +5,21 @@ import Navbar from '../components/Navbar.astro';
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Footer from '../components/Footer.astro';
-
-
-// importing Assets
-import India_map from './src/assets/indiamap.png'
-import Hack from './src/assets/right-img.png'
-import IIT_Bombay from "./src/assets/IITBombay-logo.jpg"
-import FOSSEE from "./src/assets/FOSSEE_logo.png"
-import RuDRA from "./src/assets/RuDRA.jpeg"
-import Tirupati from "./src/assets/iit-tirupati.png"
-import navavishkar from "./src/assets/navavishkaar.png"
-import npimc from "./src/assets/NMICPS-Final-01.webp"
-import ICFOSS from "./src/assets/ICFOSS.png"
-import spoken from "./src/assets/Spoken_tutotrial.jpeg"
 import Social from '../components/Social.astro';
 import '@fortawesome/fontawesome-free/css/all.css'
+
+// importing Assets
+import India_map from './assets/indiamap.png'
+import Hack from './assets/right-img.png'
+import IIT_Bombay from "./assets/IITBombay-logo.jpg"
+import FOSSEE from "./assets/FOSSEE_logo.png"
+import RuDRA from "./assets/RuDRA.jpeg"
+import Tirupati from "./assets/iit-tirupati.png"
+import navavishkar from "./assets/navavishkaar.png"
+import npimc from "./assets/NMICPS-Final-01.webp"
+import ICFOSS from "./assets/ICFOSS.png"
+import spoken from "./assets/Spoken_tutotrial.jpeg"
+
 ---
 
 
