resolving deploying error4

--- a/src/components/Logos.astro
+++ b/src/components/Logos.astro
@@ -1,11 +1,11 @@
 ---
-import IIT_Bombay from "./assets/IITBombay-logo.jpg"
-import FOSSEE from "./assets/FOSSEE_logo.png"
-import RuDRA from "./assets/RuDRA.jpeg"
-import Tirupati from "./assets/iit-tirupati.png"
-import navavishkar from "./assets/navavishkaar.png"
-import npimc from "./assets/NMICPS-Final-01.webp"
-import ICFOSS from "./assets/ICFOSS.png"
+import IIT_Bombay from "/src/assets/IITBombay-logo.jpg"
+import FOSSEE from "/src/assets/FOSSEE_logo.png"
+import RuDRA from "/src/assets/RuDRA.jpeg"
+import Tirupati from "/src/assets/iit-tirupati.png"
+import navavishkar from "/src/assets/navavishkaar.png"
+import npimc from "/src/assets/NMICPS-Final-01.webp"
+import ICFOSS from "/src/assets/ICFOSS.png"
 
 const {height}= Astro.props;
 ---
